<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>g1_nav_bringup</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="yu.zhao@horizon.auto">yu.zhao</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>launch_ros</depend>
  
  <exec_depend>fast_livo</exec_depend>
  <exec_depend>tfpub</exec_depend>
  <exec_depend>g1_navigation2</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
